--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -5,14 +5,16 @@
 <ol class="list-unstyled">
   <li *ngFor="let cols of rows" class="row no-gutters">
     <div *ngFor="let photo of cols" class="col-4" apDarkenOnHover brightness="90%">
-      <ap-card [title]=" photo.description">
-        <ap-photo [url]="photo.url" [description]="photo.description">
-        </ap-photo>
-        <div class="text-center">
-          <i aria-hidden="true" class="fas fa-heart fa-1x mr-2"></i>{{ photo.likes }}
-          <i aria-hidden="true" class="fas fa-comment fa-1x mr-2 ml-2"></i>{{ photo.comments }}
-        </div>
-      </ap-card>
+      <a [routerLink]="['/p', photo.id]">
+        <ap-card [title]=" photo.description">
+          <ap-photo [url]="photo.url" [description]="photo.description">
+          </ap-photo>
+          <div class="text-center">
+            <i aria-hidden="true" class="fas fa-heart fa-1x mr-2"></i>{{ photo.likes }}
+            <i aria-hidden="true" class="fas fa-comment fa-1x mr-2 ml-2"></i>{{ photo.comments }}
+          </div>
+        </ap-card>
+      </a>
     </div>
   </li>
 </ol>
